--- a/Web_Scrapping.ipynb
+++ b/Web_Scrapping.ipynb
@@ -6,7 +6,7 @@
       "name": "Web Scrapping.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO6AbsKhhGSnXZaCz27Ryq4",
+      "authorship_tag": "ABX9TyOl1dyjj9vsypa0xhayolXV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Lakukan langkah persiapan untuk scrap web https://books.toscrape.com/"
+        "1 Lakukan langkah persiapan untuk scrap web https://books.toscrape.com/"
       ],
       "metadata": {
         "id": "w7QMHgKB8VgM"
@@ -155,7 +155,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2. Scrap https://books.toscrape.com/ untuk mencari info harga buku berdasarkan input user, dengan judul buku yang anda suka!"
+        "2 Scrap https://books.toscrape.com/ untuk mencari info harga buku berdasarkan input user, dengan judul buku yang anda suka!"
       ],
       "metadata": {
         "id": "gvx4DwOH8XEE"
@@ -414,7 +414,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3. Tuliskan judul buku untuk rating >= 3 star"
+        "3 Tuliskan judul buku untuk rating >= 3 star"
       ],
       "metadata": {
         "id": "jzHFpTEY8b3z"
